# xhec-mlops-crashcourse-2023

./: Makefile  pyproject.toml
lessons/00-intro/: practice-intro-subject.ipynb
lessons/01-model-and-experiment-management/: practice-experiment-tracking-subject.ipynb
lessons/01-model-and-experiment-management/mlruns/0/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/546414584394831248/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/546414584394831248/10becebfd90746bfa5e3a62a8a908211/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/546414584394831248/3d853d6c84c245b895d3ab7b029f8c30/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/546414584394831248/716f96ad597541bbb9546142086ddfb3/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/546414584394831248/e7be1a42ad3e4e9ba541aa5009a47b74/: meta.yaml
lessons/01-model-and-experiment-management/mlruns/766857884227855716/: meta.yaml
lessons/02-model-deployment/fast_api_tutorial/: fast_api_tutorial.md  main.py
lessons/02-model-deployment/web_service/: app_config.py  main.py
lessons/02-model-deployment/web_service/lib/: models.py
lessons/03-pipeline-and-orchestration/: orchestration.ipynb
lessons/03-pipeline-and-orchestration/lib/: config.py  deployment.py  hello_world.py  modeling.py  preprocessing.py  workflows.py
project-poetry/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
project-poetry/app/: app.py  eda.py  utils.py
quickstart-docker/: cloudbuild.yaml
(+49 files in other folders)
