[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  | lib/detection
  | lib/trackers
  | .ipynb_checkpoints
  | __pycache__
)/
'''
[tool.isort]
profile = "black"
known_first_party = ["lib"]

[tool.poetry]
name = "xhec-mlops-crashcourse-2023"
version = "0.1.0"
description = ""
authors = ["Ludovic <ludovic.arnaud@vinci-airports.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn= "0.12.2"
scikit-learn ="1.3.1"
ipykernel="6.25.2"
pandas="2.1.1"
loguru="0.7.2"
mlflow ="2.7.1"
pydantic = ">=1,<2"
uvicorn="0.23.2"
fastapi="0.103.2"
prefect="2.13.7"



pre-commit ="*"
black= {version = "22.12.0", extras = ["jupyter"]} # be sure to change the version in .pre-commit-config.yaml to match

flake8="6.0.0" # be sure to change the version in .pre-commit-config.yaml to match
isort="5.12.0" # be sure
gdown = "^4.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
