[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["Ludovic <ludovic.arnaud@vinci-airports.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
